assets/css/style.css
/* ... */
    
    @media screen and (max-width: 607px) {
        #citySearch h2 {
            margin: 10% 0;
            font-size: 1rem;
            grid-row: 1;
        }
        #citySearch a {
            grid-column-start: 1;
            grid-column-end: 6;
            grid-row-start: 5;
            width: 95%;
            margin-left: 2.5%;
        }
        #searchBtn {
            grid-column-start: 1;
            grid-column-end: 6;
            grid-row-start: 4;
            grid-row-end: 6;
            margin: 0;
            padding: 0;
        }
    }
    
    @media screen and (max-width: 450px) {
        main {
            grid-template-columns: repeat(10, 10%);
            grid-template-rows: repeat(10, 10%);
        }
        aside {
            grid-column-start: 1;
            grid-column-end: 11;
            grid-row-start: 1;
            grid-row-end: 4;
        }
        .cityPanel {
            width: 100%;
            padding: 0;
            display: flex;
            grid-column-start: 1;
            grid-column-end: 11;
            grid-row-start: 1;
            grid-row-end: 3;
        }
        .card {
            flex: 1 0 90%;
            height: 20%;
        }
        .card h4 {
            font-size: medium;
            transform: translateY(50%);
        }
        #citySearch h2 {
            margin: 10% 0;
            font-size: 1rem;
            grid-row: 1;
        }
        #citySearch {
            display: grid;
            grid-template-columns: repeat(5, 20%);
            grid-template-rows: repeat(5, 20%);
            flex: 0 0 40%;
        }
        #userSearch {
            margin-top: -1.5rem;
            margin-bottom: 2rem;
        }
        .prvCities {
            display: flex;
            flex-direction: row;
            flex-wrap: wrap;
            height: 100%;
            grid-column-start: 7;
            grid-column-end: 11;
        }
        #citySearch {
            flex: 0 0 50%;
            border-right: 1rem solid gray;
        }
        #citySearch h2 {
            grid-column-start: 1;
            grid-column-end: 5;
        }
        #userSearch {
            margin-top: 0;
            grid-column-start: 1;
            grid-column-end: 6;
            grid-row-start: 3;
            grid-row-end: 4;
        }
        #citySearch a {
            grid-column-start: 1;
            grid-column-end: 6;
            grid-row-start: 4;
            width: 95% !important;
            margin-top: 1rem !important;
            margin-left: 2.5%;
        }
        #searchBtn {
            grid-column-start: 1;
            grid-column-end: 11;
            grid-row-start: 4;
            grid-row-end: 6;
            margin: 0;
            padding: 0;
            font-size: small;
        }
        .prvCities {
            flex: 1 1 50%;
        }
        .prvCities div {
            margin: 0!important;
        }
        #rightCurDay {
            width: 100%;
            height: 100%;
            margin: 0 !important;
            grid-column-start: 2;
            grid-column-end: 3;
            grid-row-start: 2;
            grid-row-end: 6;
            gap: 0;
        }
        #rightCurDay p {
            font-size: 1.5rem;
            padding: 0 0 0 1rem;
            margin: 0 0 5rem !important;
        }
        #curDayHi {
            grid-column-start: 1;
            grid-column-end: 3;
        }
        #curDayHumidity {
            grid-row-start: 3;
        }
        #curDayUV {
            grid-row-start: 5;
        }
        #curDayWind {
            grid-row-start: 4
        }
        #leftCurDay {
            height: 100%;
            width: 100%;
            margin: 0 !important;
        }
        #curFeel {
            font-size: 1rem;
        }
        #fiveDayContainer {
            grid-column-start: 1;
            grid-column-end: 11;
            display: flex;
            flex-direction: row;
            flex-wrap: wrap;
            margin-left: 5%;
        }
        #fiveDayContainer div {
            height: 80%;
        }
        .forecastCard1,
        .forecastCard2,
        .forecastCard3,
        .forecastCard4 {
            background-color: white;
            text-align: center;
            height: 90%;
            Width: 45%;
        }
        .forecastCard5 {
            background-color: white;
            text-align: center;
            height: 100%;
            Width: 92%;
        }
        /* #footer {
            position: absolute;
            bottom: 10px;
            left: 50%;
            transform: translateX(-50%)
        } */
        .detailDiv p {
            margin: 00 1rem 0;
            font-size: 1rem;
        }
    }

